--- a/index.html
+++ b/index.html
@@ -699,12 +699,12 @@
 				<div class="exn02_zl">
 					<h3 class="exn_bt">站/长/资/料</h3>
 					<div class="exn02_kjt">
-						<p>网名：秃鼎程序员</p>
-						<p>邮箱：2912167928@qq.com(站长同款邮箱，免费申请)</p>
+						<p>网名：对人类没有兴趣</p>
+						<p>邮箱：不告诉你(站长同款邮箱，免费申请)</p>
 						<p>性别：boy</p>
 						<p>年龄：暂不告密 [一位有理想的青少年]</p>
 						<p>特长：腿特长</p>
-						<p>爱好：音乐、运动、设计、摄影、等……</p>
+						<p>爱好：在电脑前打游戏，看番</p>
 						<p>性格：落落大方</p>
 						<p>梦想：实现财富自由</p>
 						<p>语录：凡心所向，素履所往，生如逆旅，一苇以航。——《尘曲》</p>
