修复Live2D看板娘消失和黑色遮罩问题

--- a/index.html
+++ b/index.html
@@ -1090,6 +1090,7 @@
 	<!-- 添加修复脚本 -->
 	<script src="js/fix-elements.js"></script>
 	<script src="js/image-loader.js"></script>
+	<script src="js/live2d-fix.js"></script>
 </body>
 
 </html>
