--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,7 @@
 	<script src="js/image-loader.js"></script>
 	<script src="js/live2d-fix.js"></script>
 	<script src="js/walking-animation.js"></script>
+	<script src="js/typing-animation.js"></script>
 </body>
 
 </html>
